# octos

./: .gdbinit  .gitignore  .tokeignore  CMakeLists.txt  README.md  flake.nix
App/: stm32f429zitx_flash.ld
App/Inc/: shell.h  stm32f4xx_it.h  usart3_dma.h
App/Src/: main.c  shell.c  stm32f4xx_it.c  syscall.c  sysmem.c  usart3_dma.c
Core/Arch/stm32f4xx/Inc/: api.h  isr.h
Core/Arch/stm32f4xx/Src/: api.c  isr.c
Core/Data/Inc/: bitmap.h  list.h  page.h  queue.h  tcb.h
Core/Data/Src/: bitmap.c  list.c  page.c  queue.c  tcb.c
Core/Inc/: data.h  global.h  kernel.h  main.h  scheduler.h  stm32f4xx_it.h  sync.h  task.h  timebase.h
Core/Kernel/Inc/: attr.h  config.h  global.h  isr.h  itc.h  kernel.h  mqueue.h  scheduler.h  sync.h  task.h  utils.h
Core/Kernel/Src/: global.c  isr.c  itc.c  kernel.c  mqueue.c  scheduler.c  sync.c  task.c
Core/Src/: data.c  kernel.c  main.c  scheduler.c  stm32f4xx_it.c  sync.c  task.c  timebase.c
Drivers/Inc/: led.h  uart.h  usart.h  utils.h
Drivers/Src/: led.c  uart.c  usart.c  utils.c
Emulation/: add_on.repl  basic.resc
Libs/CMSIS/Device/ST/STM32F4xx/Include/: stm32f401xc.h  stm32f401xe.h  stm32f405xx.h  stm32f407xx.h  stm32f410cx.h  stm32f410rx.h  stm32f410tx.h  stm32f411xe.h  stm32f412cx.h  stm32f412rx.h  stm32f412vx.h  stm32f412zx.h  stm32f413xx.h  stm32f415xx.h  stm32f417xx.h  stm32f423xx.h  stm32f427xx.h  stm32f429xx.h  stm32f437xx.h  stm32f439xx.h  stm32f446xx.h  stm32f469xx.h  stm32f479xx.h  stm32f4xx.h  system_stm32f4xx.h
Libs/CMSIS/Device/ST/STM32F4xx/Source/Templates/: system_stm32f4xx.c
Libs/CMSIS/Include/: cachel1_armv7.h  cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm55.h  core_cm7.h  core_cm85.h  core_sc000.h  core_sc300.h  core_starmc1.h  mpu_armv7.h  mpu_armv8.h  pac_armv81.h  pmu_armv8.h  tz_context.h
Libs/STM32F4xx_HAL_Driver/Inc/: stm32_assert_template.h  stm32f4xx_hal.h  stm32f4xx_hal_adc.h  stm32f4xx_hal_adc_ex.h  stm32f4xx_hal_can.h  stm32f4xx_hal_cec.h  stm32f4xx_hal_conf_template.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_crc.h  stm32f4xx_hal_cryp.h  stm32f4xx_hal_cryp_ex.h  stm32f4xx_hal_dac.h  stm32f4xx_hal_dac_ex.h  stm32f4xx_hal_dcmi.h  stm32f4xx_hal_dcmi_ex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dfsdm.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma2d.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_dsi.h  stm32f4xx_hal_eth.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_fmpi2c.h  stm32f4xx_hal_fmpi2c_ex.h  stm32f4xx_hal_fmpsmbus.h  stm32f4xx_hal_fmpsmbus_ex.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_hash.h  stm32f4xx_hal_hash_ex.h  stm32f4xx_hal_hcd.h  stm32f4xx_hal_i2c.h  stm32f4xx_hal_i2c_ex.h  stm32f4xx_hal_i2s.h  stm32f4xx_hal_i2s_ex.h  stm32f4xx_hal_irda.h  (+59 more)
Libs/STM32F4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h  stm32f4xx_hal_can_legacy.h  stm32f4xx_hal_eth_legacy.h
Libs/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_adc.c  stm32f4xx_hal_adc_ex.c  stm32f4xx_hal_can.c  stm32f4xx_hal_cec.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_crc.c  stm32f4xx_hal_cryp.c  stm32f4xx_hal_cryp_ex.c  stm32f4xx_hal_dac.c  stm32f4xx_hal_dac_ex.c  stm32f4xx_hal_dcmi.c  stm32f4xx_hal_dcmi_ex.c  stm32f4xx_hal_dfsdm.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_dma2d.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_dsi.c  stm32f4xx_hal_eth.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_flash_ramfunc.c  stm32f4xx_hal_fmpi2c.c  stm32f4xx_hal_fmpi2c_ex.c  stm32f4xx_hal_fmpsmbus.c  stm32f4xx_hal_fmpsmbus_ex.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_hash.c  stm32f4xx_hal_hash_ex.c  stm32f4xx_hal_hcd.c  stm32f4xx_hal_i2c.c  stm32f4xx_hal_i2c_ex.c  stm32f4xx_hal_i2s.c  stm32f4xx_hal_i2s_ex.c  stm32f4xx_hal_irda.c  stm32f4xx_hal_iwdg.c  stm32f4xx_hal_lptim.c  stm32f4xx_hal_ltdc.c  stm32f4xx_hal_ltdc_ex.c  (+54 more)
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
